WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165418
[CSS Parser] Leave the Animation type alone when the property is invalid
https://bugs.webkit.org/show_bug.cgi?id=165418
Summary
[CSS Parser] Leave the Animation type alone when the property is invalid
Dave Hyatt
Reported
2016-12-05 14:51:33 PST
[CSS Parser] Leave the Animation type alone when the property is invalid
Attachments
Patch
(1.43 KB, patch)
2016-12-05 14:52 PST
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-12-05 14:52:10 PST
Created
attachment 296193
[details]
Patch
Dave Hyatt
Comment 2
2016-12-05 14:53:55 PST
Fixed in
r209355
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug