[CSS Parser] Leave the Animation type alone when the property is invalid https://bugs.webkit.org/show_bug.cgi?id=165418

Reviewed by Dean Jackson.

* css/CSSToStyleMap.cpp:
(WebCore::CSSToStyleMap::mapAnimationProperty):



Canonical link: https://commits.webkit.org/183025@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209355 268f45cc-cd09-0410-ab3c-d52691b4dbfc